# financial-report-analyzer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
reference/: advanced.md
scripts/: analyst.py  analyze.py  config.py  exceptions.py  fetch_data.py  logging_config.py  progress.py  report.py  requirements.txt  run_report.py  validators.py  valuation.py  visualize.py
skills/chris-stock-master/: .env.example  SKILL.md
skills/chris-stock-master/references/: advanced.md
skills/chris-stock-master/scripts/: analyst.py  analyze.py  config.py  fetch_data.py  progress.py  report.py  requirements.txt  run_report.py  series_utils.py  validators.py  valuation.py  visualize.py
